Fixes spacing in various places throughout the app

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
@@ -137,3 +137,12 @@ a:not([class*="x-"]) {
     color: $color-cornflower;
   }
 }
+
+/**
+ * Paragraphs
+ */
+
+p {
+  margin-top: 0;
+  margin-bottom: 1em;
+}
